# py-mathx-lab

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CC-BY-4.0  Makefile  README.md  SECURITY.md  SIGNED_TEST.txt  do.sh  makefile.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  experiment_request.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
config/: environment.yml  environment_dev.yml
docs/: background.md  conf.py  development.md  experiments.md  getting-started.md  index.md  makefile.md  mathematical-experimentation.md  pdf.md  references.md  refs.bib  tags.md
docs/_static/: gallery.css
docs/background/: background_page_template.md  background_taylor-series.md  mersenne-primes.md  perfect-numbers.md  prime-numbers.md  taylor-series.md
docs/experiments/: e001.md  e002.md  e003.md  e004.md  e005.md  e006.md  e007.md  e008.md  e009.md  e010.md  e011.md  e012.md  e013.md  e014.md  e015.md  e016.md  e017.md  e018.md  e019.md  e020.md  e021.md  e022.md  e023.md  e024.md  e025.md  e026.md  e027.md  e028.md  e029.md  e030.md  e031.md  e032.md  e033.md  e034.md  e035.md  e036.md  e037.md  e038.md  e039.md  e040.md  (+8 more)
experiments/: __init__.py  e001.py  e001_taylor_error_landscapes.py  e002.py  e003.py  e004.py  e005.py  e006.py  e007.py  e008.py  e009.py  e010.py  e011.py  e012.py  e013.py  e014.py  e015.py  e016.py  e017.py  e018.py  e019.py  e020.py  e021.py  e022.py  e023.py  e024.py  e025.py  e026.py  e027.py  e028.py  e029.py  e030.py  e031.py  e032.py  e033.py  e034.py  e035.py  e036.py  e037.py  e038.py  (+9 more)
mathxlab/: __init__.py
mathxlab/exp/: __init__.py  cli-py  cli.py  io.py  logging.py  logging_setup.py  reporting.py  seeding.py
mathxlab/experiments/: __init__.py  _prime_utils.py  e001.py  e001_taylor_error_landscapes.py  e002.py  e002_even_perfect_growth.py  e003.py  e003_abundancy_index_landscape.py  e004.py  e004_sigma_benchmark.py  e005.py  e005_odd_perfect_filter_pipeline.py  e006.py  e006_near_misses.py  e007.py  e007_mersenne_growth.py  e008.py  e008_lucas_lehmer_scan.py  e009.py  e009_small_factor_scan.py  e010.py  e010_perfect_numbers_from_mersenne.py  e011.py  e011_mersenne_prime_heuristic.py  e012.py  e012_fermat_pseudoprimes.py  e013.py  e013_prime_polynomial_counterexample.py  e014.py  e014_primorial_pm1_counterexamples.py  e015.py  e015_wilson_test_infeasibility.py  e016.py  e016_trial_division_vs_mr.py  e017.py  e017_sieve_memory_segmented.py  e018.py  e018_mr_base_choice_counterexamples.py  e019.py  e019_prime_density_pnt.py  (+56 more)
mathxlab/num/: __init__.py  series.py
mathxlab/plots/: helpers.py
mathxlab/tools/: __init__.py  docs_pdf.py  make_social_preview.py
mathxlab/utils/: __init__.py  plotting.py
mathxlab/viz/: mpl.py
scripts/: do_python.sh  run_experiment.ps1  run_prep_bash_scripts.sh
tests/: test_exp_cli.py  test_exp_io.py  test_exp_random.py  test_exp_reporting.py  test_exp_seeding.py  test_hello_world.py  test_num_series.py  test_plots_helpers.py  test_viz_mpl.py
