[project]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=2.0",
  "scipy>=1.13",
  "sympy>=1.12",
]
description = "A gallery of numerical experiments: conjectures, counterexamples, and code."
dynamic = ["version"]
name = "mathxlab"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ipython",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6.0",
]

docs = [
  "sphinx>=8.0",
  "myst-parser>=3.0",
  "sphinxcontrib-bibtex>=2.6",
  "furo>=2024.0.0",
]

[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

# Third-party libraries may ship incomplete typing information.
# Keep strict mode, but silence missing type information from external deps.
ignore_missing_imports = true
follow_imports = "silent"

# Restrict what mypy checks (fast, predictability).
files = [
  ".",
]
exclude = [
  ".venv",
  "build",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "out",
]

[tool.ruff.format]
# Ruff format is Black-compatible by default.
# Keep defaults unless you have a strong reason to change them.

[tool.ruff.lint]
# A solid, modern baseline: pycodestyle/pyflakes + import sorting + common bugbear rules + upgrades.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
# Ruff's formatter handles code layout; ignore line-length violations (especially in docstrings/comments).
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mathxlab", "experiments"]

[tool.setuptools]
packages = ["mathxlab", "experiments"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
